--- a/LIBRARY-MS/BACKEND/package.json
+++ b/LIBRARY-MS/BACKEND/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
